# SpvGenTwo

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  LICENSE  LINKER.md  README.md  cmake-variants.yaml
.github/workflows/: CI.yml
cli/include/: cli.h
cli/source/: cli.cpp
common/include/: BinaryFileWriter.h  ConsoleLogger.h  HeapAllocator.h
common/include/common/: Algorithms.h  BinaryFileReader.h  BinaryFileWriter.h  BinaryVectorWriter.h  Callable.h  ConsoleLogger.h  ControlFlowGraph.h  ExprGraph.h  Expression.h  ExternalMemoryAllocator.h  FunctionCallGraph.h  GrammarHelper.h  Graph.h  HeapAllocator.h  HeapCallable.h  HeapHashMap.h  HeapList.h  HeapString.h  HeapVector.h  LinkerHelper.h  ModulePrinter.h  ModuleToString.h  Node.h  ReflectionHelper.h  ReflectionHelperTemplate.inl  SimpleExpr.h  TypeHelper.h  VulkanInterop.h
common/source/: BinaryFileReader.cpp  BinaryFileWriter.cpp  ConsoleLogger.cpp  ExternalMemoryAllocator.cpp  FunctionCallGraph.cpp  GrammarHelper.cpp  HeapAllocator.cpp  LinkerHelper.cpp  ModulePrinter.cpp  ModuleToString.cpp  ReflectionHelper.cpp  TypeHelper.cpp  VulkanInterop.cpp
dis/: test.bat
dis/source/: dis.cpp  main.cpp
dis/test/: constants.spv  controlFlow.spv  expressionGraph.spv  extensions.spv  functionCall.spv  oldInstrTest.spv
example/include/: Constants.h  ExpressionGraph.h  Extensions.h  FunctionCall.h  OldInstrTest.h  Parsing.h
example/include/example/: ComputeShader.h  ControlFlow.h  FragmentShader.h  FunctionCall.h  GeometryShader.h  Linkage.h  Types.h
example/source/: ComputeShader.cpp  Constants.cpp  ControlFlow.cpp  ExpressionGraph.cpp  Extensions.cpp  FragmentShader.cpp  FunctionCall.cpp  GeometryShader.cpp  Linkage.cpp  OldInstrTest.cpp  Parsing.cpp  Types.cpp  example.cpp
lib/include/: Allocator.h  BasicBlock.h  Constant.h  Entry.h  EntryIterator.h  EntryPoint.h  FNV1aHasher.h  Flag.h  Function.h  GLSL450Instruction.h  HashMap.h  HashMapIterator.h  Hasher.h  InferResultType.h  Instruction.h  LinearProbingHashMap.h  List.h  Logger.h  Module.h  Operand.h  Operators.h  Reader.h  SpvDefines.h  Type.h  Writer.h  lib.h  stdreplacement.h
lib/include/spvgentwo/: Allocator.h  BasicBlock.h  BasicBlockTemplate.inl  Constant.h  Entry.h  EntryIterator.h  EntryPoint.h  EntryPointTemplate.inl  FNV1aHasher.h  Flag.h  Function.h  FunctionTemplate.inl  GLSL450Instruction.h  Glsl.h  Grammar.h  HashMap.h  HashMapIterator.h  Hasher.h  InferResultType.h  Instruction.h  InstructionTemplate.inl  List.h  Logger.h  Module.h  ModuleTemplate.inl  OpenCl.h  Operand.h  Operators.h  Reader.h  Spv.h  SpvDefines.h  SpvGenTwo.h  String.h  Templates.h  Type.h  TypeAlias.h  TypeInferenceAndValiation.h  Vector.h  Writer.h  stdreplacement.h
lib/source/: Allocator.cpp  BasicBlock.cpp  Constant.cpp  EntryPoint.cpp  Function.cpp  GLSL450Instruction.cpp  Grammar.cpp  InferResultType.cpp  Instruction.cpp  Module.cpp  Operand.cpp  Operators.cpp  String.cpp  Type.cpp  TypeInferenceAndValiation.cpp  lib.cpp
link/source/: link.cpp
misc/: containers.natvis  spvgentwo.cppcheck
refl/source/: refl.cpp
test/: catch2.runsettings
test/include/test/: ComputeShader.h  Constants.h  ControlFlow.h  ExpressionGraph.h  Extensions.h  FragmentShader.h  FunctionCall.h  GeometryShader.h  Linkage.h  Modules.h  OldInstrTest.h  SpvValidator.h  TestLogger.h  Types.h
test/source/: AllocatorTests.cpp  BitInstructions.cpp  ComputeShader.cpp  ConstantFunamentals.cpp  ConstantFundamentals.cpp  Constants.cpp  ControlFlow.cpp  ExpressionGraph.cpp  Extensions.cpp  FragmentShader.cpp  FunctionCall.cpp  GeometryShader.cpp  ImageRead.cpp  Linkage.cpp  ModuleTests.cpp  OldInstrTest.cpp  PhysicalStorageTest.cpp  SpvValidator.cpp  TestLogger.cpp  Types.cpp  example.cpp
